# hkreduce

./: .gitignore  CMakeLists.txt  README.md  TODO.md  build_by_poetry.py  example.yaml  main.cpp  output-model.yaml  pyproject.toml  ruff.toml  run.yaml  setup.py
build-python/: setup.py
cmake-modules/: FindSphinx.cmake
cpp/include/hkreduce/adjacency_matrix/: csr.h
cpp/include/hkreduce/allocators/: wrappers.h
cpp/include/hkreduce/collections/: abc.h  algorithms.h  array_based.h  bitmap.h  bool_reference.h  constants.h  sectioned.h
cpp/include/hkreduce/reducing/: drg.h  drgep.h
cpp/src/: CMakeLists.txt
cpp/src/hkreduce/python_interface/: default_allocator.cpp  types.cpp
docs/: CMakeLists.txt
docs/source/: conf.py  index.rst
docs/sphinx-source/: conf.py  index.rst
hkreduce/: __init__.py  __main__.py  algorithms.py  cli.py  config.py  cpp_interface.cpp  cpp_interface.pyi  errors.py  logging.py  main.py  reducer.py  reducing.py  simulation.py  typing.py  utils.py
include/: _sectioned_vector.h  algorithms.h  errors.h
include/adjacency_matrix/: abc.h  csr.h
include/collections/: abc.h  array_based.h  constants.h
include/containers/: abc.h  sectioned_vector.h  vector.h
include/hkreduce/adjacency_matrix/: abc.h  csr.h
include/hkreduce/allocators/: abc.h  default.h  wrappers.h
include/hkreduce/collections/: abc.h  algorithms.h  array_based.h  bitmap.h  bool_reference.h  constants.h  sectioned.h
include/hkreduce/reducing/: drg.h  drgep.h
include/hkreduce/utils/: type_traits.h
include/python_interface/: allocator.h  types.h
include/reducing/: drg.h  drgep.h  pfa.h
interface/: __main__.py  run_redusing.py
python/hkreduce/: config.py  cpp_interface.pyi  errors.py  main.py  simulation.py
src/: CMakeLists.txt
src/hkreduce/python_interface/: types.cpp
