[tool.poetry]
name = "hkreduce"
version = "0.1.0"
description = ""
authors = ["klasifate <klasifate@gmail.com>", "nevinskii-georgii mririyss@gmail.com"]
readme = "README.md"
packages = [{include = "hkreduce"}]
package-mode = true
build = "build_by_poetry.py"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.0"
cantera = "^3.0.1"
pydantic = "^2.8.2"
click = "^8.1.7"
pyyaml = "^6.0.2"
types-pyyaml = "^6.0.12.20240808"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
ipython = "^8.26.0"
sphinx = "<8"
sphinx-rtd-theme = "^2.0.0"
breathe = "^4.35.0"
cantera = "^3.0.1"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core", "setuptools", "wheel", "numpy"]
build-backend = "poetry.core.masonry.api"
